# live-transcribe-fine

./: .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  SECURITY.md  buildspec.json  vcpkg.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: Package-Windows.ps1  install-vcpkg-macos.bash  package-ubuntu
.github/workflows/: build-project.yaml  my-stale.yaml  my-testing.yaml  my-unsupported-build.yaml  pr-pull.yaml  push.yaml
data/locale/: en-US.ini  ja-JP.ini
docs/: package-lock.json  package.json
docs/src/layouts/: Layout.astro
docs/src/pages/: index.astro
src/: plugin-main.c
src/BridgeUtils/: AsyncTextureReader.hpp  GsUnique.hpp  ILogger.hpp  ObsLogger.hpp
src/Core/: MainPluginContext.cpp  MainPluginContext.h  MainPluginContext_c.cpp  PluginConfig.hpp  PluginProperty.hpp  RecognitionContext.hpp
src/UpdateChecker/: UpdateChecker.hpp
src/WebSocket/: BroadcastWebSocketServer.hpp  WebSocket.hpp  WebSocketServer.hpp  WebSocketServerPool.hpp
tests/: CMakeLists.txt
tests/UpdateChecker/: UpdateChecker_test.cpp
unsupported/: update-packages.sh
unsupported/arch/: README.md
unsupported/arch/live-transcribe-fine/: PKGBUILD
unsupported/arch/live-transcribe-fine-git/: PKGBUILD
unsupported/flatpak/: README.md  com.obsproject.Studio.Plugin.LiveTranscribeFine.json  com.obsproject.Studio.Plugin.LiveTranscribeFine.metainfo.xml
vcpkg-overlay-ports/kaldi/: 0000-fix-for-vcpkg.patch  vcpkg.json
vcpkg-overlay-ports/vosk/: 0000-fix-for-vcpkg.patch
